--- a/css/all-style.css
+++ b/css/all-style.css
@@ -1,6 +1,28 @@
 /*creado por hachewd 
 hanzel mata r.
 */
+@font-face {
+	font-family: 'icomoon';
+	src:url('../fonts/icomoon.eot');
+	src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/icomoon.woff') format('woff'),
+		url('../fonts/icomoon.ttf') format('truetype'),
+		url('../fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+	font-family: 'icomoon';
+	content: attr(data-icon);
+	speak: none;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 body{
 	margin:0;
 	padding: 0;
@@ -33,31 +55,33 @@ body{
 }
 .socialmedia li,.secmenu li{
 	display: inline-block;
+	font-size: 12px;
 	vertical-align: top;
-	
 }
-.socialmedia a{
+.socialmedia a, .secmenu li a{
 	color:#363535;
 	display: block;
 	margin:8px 2px 0 2px;
 	text-decoration: none;
 	text-transform: uppercase;
-
 }
 .linetop a:hover,.socialmedia a:hover{
 	color:#acd037;
 }
-.secmenu li a{
-	color:#363535;
-	display: block;
-	font-size: 12px;
-	margin:8px 2px 0 2px;
-	text-decoration: none;
-	text-transform: uppercase;
+.icon-facebook, .icon-twitter, .icon-home{
+	font-size: 15px;
 }
-.secmenu li a.home{
-	font-size: 16px;
-	margin-top:6px;
+.share:before{
+	content: "Share";
+}
+.legal:before{
+	content: "Legal";
+}
+.registro:before{
+	content: "Registrese";
+}
+.ingresar:before{
+	content: "Ingresar";
 }
 .secmenu li a.ingresar{
 	background:#1e9ccc;
@@ -67,15 +91,34 @@ body{
 	margin-top:3px;
 	padding: 5px 10px;
 }
-.menushare{
-	font-size: 11px;
-}
 
 @media screen and (min-width:320px) and (max-width:480px) {
 	.widpages{
 		width:98%;
 	}
-	
+	.share,.legal, .registro,.ingresar{
+		font-family: 'icomoon';
+		speak: none;
+		font-style: normal;
+		font-weight: normal;
+		font-variant: normal;
+		text-transform: none;
+		line-height: 1;
+		-webkit-font-smoothing: antialiased;
+		font-size: 16px;
+	}
+	.share:before {
+		content: "\e007";
+	}
+	.legal:before {
+		content: "\e008";
+	}
+	.registro:before {
+		content: "\e009";
+	}
+	.ingresar:before {
+		content: "\e00a";
+	}
 }
 @media screen and (min-width:768px) and (max-width:1024px) {
 	.widpages{
